my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ESYNTAX_old_assign/ESYNTAX_old_assign.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESYNTAX_old_assign.dml:12:11: error ESYNTAX: syntax error at '='
